[package]
name = "live"
version = "0.1.0"
authors = ["Matt Johnston <matt@ucc.asn.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CIC filter
sdr = { git = "https://github.com/mkj/sdr-rs" }
# sdr = { path = "../../../sdr-rs" }
# wav IO
hound = "3.4"

# and the basics
anyhow = "1.0"
argh = "0.1"
log = "0.4"
simplelog = "0.8"

# speed the build a bit
[profile.release]
debug = 0

[profile.dev]
debug = 0
